Promise Api with Examples

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <button id="clickMe">Click Me!..</button>
 
-     <script src="HigherOrderFns.js"></script>
+     <script src="promiseApis.js"></script>
 </body>
 </html>
