Async await with This Concepts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1> Welcome to JavaScript Recap</h1>
 
     <button id="clickMe">Click Me!..</button>
+    <button onclick=alert(this.tagName)>Touch me</button>   
 
-     <script src="promiseApis.js"></script>
+     <script src="call_apply_bind.js"></script>
 </body>
 </html>
